--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tajawal&display=swap" >
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Libre+Caslon+Text&display=swap">
     <link href="https://fonts.googleapis.com/css?family=Parisienne&display=swap" rel="stylesheet">
-    <link rel="icon"  href="/fraico.jpg" />
+    <link rel="icon"  href="/image.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spolaya Fragrance</title>
   </head>
